--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ img {
 <center>
 <button><a href="file:///C:/Users/354229058/Downloads/Resume.pdf">My Resume</a></button>
 <button><a href="file:///C:/Users/354229058/Downloads/Cover%20Letter.pdf">Cover Letter</a></button>
-<button><a href="file:///C:/Users/354229058/Downloads/artifacts.htm">My artifacts</a></button>
+<button><a href="file:///C:/Users/354229058/Downloads/artifacts.html">My artifacts</a></button>
 <button><a href="url">link text</a></button>
 <button><a href="url">link text</a></button>
 <button><a href="url">link text</a></button>
